[gd_scene load_steps=22 format=3 uid="uid://decsef3jj3lt5"]

[ext_resource type="Script" path="res://game.gd" id="1_bhcvq"]
[ext_resource type="PackedScene" uid="uid://bhvihrt8dipll" path="res://Scenes/Button/button.tscn" id="1_j4pve"]
[ext_resource type="AudioStream" uid="uid://bfckfdcolot1o" path="res://Assets/sfx/umiranja/crvić_umire1.mp3" id="2_bqpuh"]
[ext_resource type="Shader" path="res://game.gdshader" id="2_k6uao"]
[ext_resource type="Texture2D" uid="uid://b4d0kcmvv4qcx" path="res://Scenes/background.png" id="3_hovne"]
[ext_resource type="AudioStream" uid="uid://bevhg57svxpq1" path="res://Assets/sfx/umiranja/crvić_umire2.mp3" id="3_nbloh"]
[ext_resource type="AudioStream" uid="uid://f2f5vqkdg4fc" path="res://Assets/sfx/umiranja/crvić_umire3.mp3" id="4_nolek"]
[ext_resource type="Script" path="res://camera_2d.gd" id="4_u8t00"]
[ext_resource type="AudioStream" uid="uid://cjaioavfavj2s" path="res://Assets/sfx/umiranja/crvić_umire4.mp3" id="5_a5gfo"]
[ext_resource type="AudioStream" uid="uid://cicbc1qmv1g4n" path="res://Assets/sfx/umiranja/crvić_umire5.mp3" id="6_r0cbq"]
[ext_resource type="Script" path="res://Scenes/dialog.gd" id="7_64bvv"]
[ext_resource type="AudioStream" uid="uid://cuycklabjvlb0" path="res://Assets/sfx/umiranja/crvić_umire6.mp3" id="7_spt0p"]
[ext_resource type="FontFile" uid="uid://dr1wo1inm6yfw" path="res://Assets/Seven Segment.ttf" id="7_ydsit"]
[ext_resource type="AudioStream" uid="uid://lofuk3lgf1vl" path="res://Assets/sfx/umiranja/pikqi.mp3" id="8_0f3wr"]
[ext_resource type="AudioStream" uid="uid://gl8rjilyleca" path="res://Assets/Music/8bar1.wav" id="8_837jh"]
[ext_resource type="AudioStream" uid="uid://ceu18tf3l4bio" path="res://Assets/Music/4bar.wav" id="9_iourf"]
[ext_resource type="AudioStream" uid="uid://d25p5e1skh15i" path="res://Assets/Music/8bar2.wav" id="10_05o5g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sesmb"]
size = Vector2(995, 433.534)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_rpvun"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_0s1i7"]
seamless = true
seamless_blend_skirt = 0.279
noise = SubResource("FastNoiseLite_rpvun")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ob5l5"]
shader = ExtResource("2_k6uao")
shader_parameter/Transparency = 3.0
shader_parameter/Slow = 25.0
shader_parameter/Noise = SubResource("NoiseTexture2D_0s1i7")

[node name="Game" type="Node2D"]
process_mode = 3
script = ExtResource("1_bhcvq")
INIT_COLOR = Color(0.623529, 0.14902, 0.184314, 0.313726)
umiranje = Array[AudioStream]([ExtResource("2_bqpuh"), ExtResource("3_nbloh"), ExtResource("4_nolek"), ExtResource("5_a5gfo"), ExtResource("6_r0cbq"), ExtResource("7_spt0p"), ExtResource("8_0f3wr")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="BackgroundColor" type="ColorRect" parent="CanvasLayer"]
z_index = -2
offset_right = 1150.0
offset_bottom = 650.0
color = Color(0.0885599, 0.0885599, 0.0885599, 1)

[node name="DamageColorOverlay" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
top_level = true
offset_right = 1152.0
offset_bottom = 654.0
scale = Vector2(1.00712, 1.00483)
color = Color(0.623529, 0.14902, 0.184314, 0.313726)

[node name="Label" type="Label" parent="CanvasLayer"]
z_index = 10
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.0
offset_top = 510.0
offset_right = 39.0
offset_bottom = 609.0
grow_horizontal = 2
scale = Vector2(1.44085, 0.87726)
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("7_ydsit")
theme_override_font_sizes/font_size = 65
text = "0"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = -13.0
offset_top = -288.0
offset_right = 2987.0
offset_bottom = 2712.0
scale = Vector2(0.397971, 0.397971)
texture = ExtResource("3_hovne")

[node name="A" parent="." groups=["button_group"] instance=ExtResource("1_j4pve")]
position = Vector2(903, 577)
input_name = "A"

[node name="DOWN" parent="." groups=["button_group"] instance=ExtResource("1_j4pve")]
position = Vector2(232, 573)
input_name = "DOWN"

[node name="UP" parent="." groups=["button_group"] instance=ExtResource("1_j4pve")]
position = Vector2(246, 343)
input_name = "UP"

[node name="RIGHT" parent="." groups=["button_group"] instance=ExtResource("1_j4pve")]
position = Vector2(337, 453)
input_name = "RIGHT"

[node name="LEFT" parent="." groups=["button_group"] instance=ExtResource("1_j4pve")]
position = Vector2(118, 458)
input_name = "LEFT"

[node name="Y" parent="." groups=["button_group"] instance=ExtResource("1_j4pve")]
position = Vector2(905, 343)
input_name = "Y"

[node name="X" parent="." groups=["button_group"] instance=ExtResource("1_j4pve")]
position = Vector2(798, 453)
input_name = "X"

[node name="B" parent="." groups=["button_group"] instance=ExtResource("1_j4pve")]
position = Vector2(1031, 453)
input_name = "B"

[node name="SpawnArea" type="Area2D" parent="."]
visible = false
scale = Vector2(1, 1.02189)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea"]
position = Vector2(569.5, 378.233)
shape = SubResource("RectangleShape2D_sesmb")
debug_color = Color(0, 0.6, 0.701961, 0.14902)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 326)
script = ExtResource("4_u8t00")
randomStrength = 10.0

[node name="Dialog" type="CanvasLayer" parent="Camera2D"]
unique_name_in_owner = true
follow_viewport_enabled = true
script = ExtResource("7_64bvv")
d_file = "res://Assets/dialogs.json"

[node name="Text" type="RichTextLabel" parent="Camera2D/Dialog"]
offset_left = 362.0
offset_top = 103.0
offset_right = 1089.0
offset_bottom = 328.0
scale = Vector2(0.624223, 0.607973)
theme_override_colors/default_color = Color(0.299668, 0.801919, 0.469303, 1)
theme_override_fonts/normal_font = ExtResource("7_ydsit")
theme_override_font_sizes/normal_font_size = 49
text = "Text"
custom_effects = [null]

[node name="shader" type="ColorRect" parent="."]
visible = false
top_level = true
material = SubResource("ShaderMaterial_ob5l5")
offset_right = 1177.0
offset_bottom = 668.0

[node name="8bart1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_837jh")

[node name="Intro4Bar" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_iourf")
autoplay = true

[node name="Intense" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_05o5g")

[node name="death" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="dialogue_over" from="Camera2D/Dialog" to="." method="_on_dialog_dialogue_over"]
[connection signal="finished" from="8bart1" to="." method="_on_bart_1_finished"]
[connection signal="finished" from="Intro4Bar" to="." method="_on_intro_4_bar_finished"]
